# ai-changelog-generator

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.it.md  README.md  SECURITY.it.md  SECURITY.md  action.yml  generate.py  pyproject.toml
.github/workflows/: release.yml  test-changelog.yml  test.yml
badges/: test-badge.json
changelog/: __init__.py  classifier.py  config.py  evaluator.py  exceptions.py  github_client.py  prompt.py  providers.py  publisher.py
doc_progetto/: ai-changelog-generator-spec.md
docs/: ARCHITECTURE.md
tests/: test_classifier.py  test_config.py  test_evaluator.py  test_generate.py  test_github_client.py  test_prompt.py  test_providers.py  test_publisher.py
