[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["changelog"]

[project]
name = "ai-changelog-generator"
version = "1.0.0"
description = "AI-powered changelog generator GitHub Action"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = ["requests>=2.32"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests>=2.32",
]

[project.scripts]
ai-changelog = "generate:entrypoint"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["changelog"]
branch = true

[tool.coverage.report]
fail_under = 90
